--- a/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
+++ b/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
@@ -49,15 +49,11 @@
         <h2 class="govuk-heading-l">Why farmland birds need extra food in winter</h2>
         <p>Farmland bird species have declined since the 1970s. This is partly due to changing farming menthods which has decreased the availability of seeds in winter and early spring. </p>
         <p>Spreading seed on your land is a simple and effective way to increase the availability of food for farmland birds.</p>
-        <p>Seed-eating farmland birds include finches, buntings and partridges. Bird ID guides are available:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="">Game and Wildlife Conservation Trust's (GWCT) Big Farmland Bird Count</a></li>
-          <li><a href="">Royal Society for the Protection of Birds (RSPB) Bird Identifier</a></li>
-        </ul>
+
 
         <h2 class="govuk-heading-l">When to start spreading seed.</h2>
         <p><a href="">Start spreading seed when other seed sources on your farm start to become depleted. The time this happens varies and depends on: </a></p>
-        <p>Supplementary feed alongside:</p>
+
         <ul class="govuk-list govuk-list--bullet">
           <li><a href="">the amount of natural and sown seed available in the autumn</a></li>
           <li><a href="">the number of birds</a></li>
@@ -88,35 +84,48 @@
 </p>
 
         <p>TABLES</p>
+<p>If you farm organically, or are converting to organic farming, you must either use organic seed or get approval from your organic certification body to use non-organic seed.</p>
+
+
 
         <p>You can alter your seed mix to meet the specific needs of certain species. You can adjust your seed mix if you know one of these species is present in your area:</p>
+<h2 class="govuk-heading-m">Adapting the seed mix</h2>
+<p>Different species prefer feeding on different seeds, depending on the beak size and the seed's nutritional value. You can adapt the recommended seed mix to provide fod for certain species if you know they are in your area.</p>
+<p> For example, larger buntings such as corn buntings and yellowhammers prefer cereals. So you could add barley or triticale to the recommended seed mix.</p>
+<p> Finches prefer smaller, oily seeds. You could increase the proportions of these by adding some linseed or mustard seed.</p>
+<p> Some species have seen a greater decline in populations than others so it is especially worthwhile adapting your seed mix to suit these.</p>
+<p> For example:</p>
+
         <ul class="govuk-list govuk-list--bullet">
-          <li>corn bunting - feed mostly wheat with smaller amounts of naked oats and barley</li>
-          <li>tree sparrow - increase the amount of red millet and sunflower hearts that you feed</li>
-          <li>grey partridge - increase the proportion of cereals that you feed</li>
+          <li>corn bunting prefer mostly wheat with smaller amounts of naked oats and barley</li>
+          <li> for tree sparrows increase the amount of red millet and sunflower hearts</li>
+          <li>for grey partridge increase the proportion of cereals in your mix</li>
         </ul>
+        <p> When adapting the seed mix make sure that:</p>
 
-        <h3 class="govuk-heading-m">When to feed</h3>
-        <p>The best time to start feeding is when other seed sources of your farm are starting to become depleted. This will vary and depends on the amount of natural and sown seed available in the autumn, the number of birds and how harsh the weather is. As a guide, start feeding from December through to April.</p>
-        <p>You should start feeding from the beginning of November if your winter bird food plots have failed or if it is the first winter of an autumn-sown plot. This will replace your plots as a food source.</p>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>you include at least 2 cereals and 3 small-seeded crops</li>
+                  <li>small-seeded crops make up at least 30% of the mix by weight</li>
+                  <li>you do not use maize or tic beans as they attract pests and birds prefer other seeds</li>
+                </ul>
 
-        <h3 class="govuk-heading-m">How much to feed</h3>
-        <p>Your aim is to always have food available at your feeding sites. You should not leave a site for more than a day without food.</p>
-        <p>To start with, feed around 25kg of seed per week at each feeding site. Adjust the amount of seed to match that needed by the birds. Each feeding situation will be different, so you should check feeding sites regularly and replace seed when most of it has been eaten.</p>
-        <p>Increase the frequency or the volume of feeding if needed. Birds need more seed during periods of cold weather, particular if other food sources are unavailable due to frost or snow.</p>
-        <p>There should not be large amounts of seed left at the end of each week. If seed is left uneaten, lower the amount of seed to reduce waste and consumption by deer, rats and pigeons.</p>
-        <p>If you have more than one feeding site, replace the seed at each site on a different day. This will make sure there is always seed available on your land.</p>
+        <p>The <a href="">Big Farmland Bird Count</a> from the Game and Wildlife Conservation Trust and the 
+          <a href="">Bird Identifier</a>from the Royal Society for the Protection of Birds</a> can help you recognise what is living in your area.</p>
+        </ul>
+        <h2 class="govuk-heading-m">How much to spread</h2>
+        <p>You should always have food available at your feeding sites.</p>
+        <p>To start with, spread around 25kg of seed each week at every site. Check regularly and adjust how often you spread seed or the amount you spread to match that needed by the birds. Each feeding situation will be different, so you should check feeding sites regularly and replace seed when most of it has been eaten.</p>
+        <p>Birds need more seed during periods of cold weather, particular if they can't feed from other sources due to frost or snow.</p>
+        <p>There should not be large amounts of seed left uneaten. If this happens, lower the amount of seed to reduce waste and the likelihood of the seed being eaten by deer, rats and pigeons.</p>
 
-        <h3 class="govuk-heading-m">How to spread seed</h3>
-        <p>Broadcast seed either by hand or using equipment, such as a well-cleaned slug pellet applicator or purpose-built spreader.</p>
-        <p>Aim for an even spread of seed. It is important not to spread seed too thickly, as this may encourage diseases and parasites harmful to farmland birds, as well as pests such as rats.</p>
-        <p>To maintain good hygiene and reduce the risks of disease transmission between birds at your supplementary feeding sites:</p>
+        <h2 class="govuk-heading-m">How to spread seed effectively</h2>
+        <p>Aim for an even spread of seed either by hand or using equipment, such as a clean slug pellet spreader or purpose-built spreader.</p>
+        <p>To discourage pests like rats and reduce the risk of disease at your feeding sites you should:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>spin or scatter seed only, to avoid creating piles of seed or long trails</li>
-          <li>check the seed consumption and only replace seed when most of it is eaten</li>
-          <li>move feeding sites every year, to reduce pathogen build-up</li>
-          <li>you can move feeding sites during the same winter, but no more than 50m at a time</li>
-          <li>stop feeding for at least a week if there is a visible build-up of uneaten food</li>
+          <li>spin or scatter seed to avoid creating piles of seed or long trails</li>
+          <li>move feeding sites every year to reduce pathogen build-up</li>
+          <li>stop feeding for at least a week if there is a build-up of uneaten food</li>
+<li>move feeding sites during the same winter, but no more than 50m at a time</li>
         </ul>
 
 
