--- a/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
+++ b/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
@@ -13,7 +13,7 @@
       <div class="govuk-grid-column-two-thirds">
       <span class="govuk-caption-xl">Guidance</span>
       <h1 class="govuk-heading-xl">S011C: Supplementary winter bird feeding</h1>
-      <p class="govuk-body-l">Increase bird populations by spreading seed for them during the winter and spring when their natural food is harder to find.</p>
+      <p class="govuk-body-l">Increase bird populations by spreading seed for them during winter and spring when their natural food is harder to find.</p>
     </div>
 
       <!-- PUBLISHING INFORMATION -->
@@ -39,29 +39,35 @@
           <nav role="navigation" class="gem-c-contents-list  " data-module="track-click" aria-label="Pages in this guide">
             <h2 class="gem-c-contents-list__title govuk-body-s govuk-!-margin-bottom-0">Contents</h2>
             <ol class="gem-c-contents-list__list">
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#"></a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">Why farmland birds need extra food in winter</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">When to start spreading seed</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">Choosing appropriate feeding sites</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">The recommended seed mix</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">Adapting the seed mix</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">How much to spread</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">How to spread the seed effectively</a></li>
             </ol>
           </nav>
         </aside>
 
         <!-- MAIN CONTENTS -->
 
-        <h2 class="govuk-heading-l">Why farmland birds need extra food in winter</h2>
-        <p>Farmland bird species have declined since the 1970s. This is partly due to changing farming menthods which has decreased the availability of seeds in winter and early spring. </p>
+        <h2 class="govuk-heading-m">Why farmland birds need extra food in winter</h2>
+        <p>Farmland bird species have declined since the 1970s. This is partly due to changing farming methods which has decreased the availability of seeds in winter and early spring. </p>
         <p>Spreading seed on your land is a simple and effective way to increase the availability of food for farmland birds.</p>
 
 
-        <h2 class="govuk-heading-l">When to start spreading seed.</h2>
-        <p><a href="">Start spreading seed when other seed sources on your farm start to become depleted. The time this happens varies and depends on: </a></p>
+        <h2 class="govuk-heading-m">When to start spreading seed</h2>
+        <p>Start spreading seed when other seed sources on your farm start to become depleted. The time this happens varies and depends on: </p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li><a href="">the amount of natural and sown seed available in the autumn</a></li>
-          <li><a href="">the number of birds</a></li>
-          <li><a href="">how harsh the weather is</a></li>
+          <li>the amount of natural and sown seed available in the autumn</a></li>
+          <li>the number of birds</a></li>
+          <li>how harsh the weather is</a></li>
         </ul>
         <p>As a guide, feed from December through to April.</p>
-        <p>You should start feeding from the beginning of November if your winter bird food plots have failed or it is the first winter of an autumn-sown winter bird food plot. This will replace your winter bird food plots as a source.</p>
-
+        <p>You should start feeding from the beginning of November if your <a href="">winter bird food plots</a> have failed or it is the first winter of an <a href="">autumn-sown winter bird food plot</a>. This will replace these plots as a food source.</p>
+  </ul>
         <h2 class="govuk-heading-m">Choosing appropriate feeding sites</h2>
         <p>You need to spread seed at more than one site to increase availability and provide seed for species which prefer to feed in different locations. For example, tree sparrows and yellowhammers like to have nearby cover, such as a hedge. Corn buntings prefer sites next to fences or ditches and with vantage points to perch and scan for predators.</p>
         <p>Top up the seed at each site on different days to make sure there is always some seed available. You will also reduce the risk of attracting pests, such as rats.
@@ -78,19 +84,50 @@
         </ul>
 
 
-        <h2 class="govuk-heading-m">The recommended seed mix/h2>
+        <h2 class="govuk-heading-m">The recommended seed mix</h2>
 
         <p>A good general seed mix appropriate for a range of farmland birds:
 </p>
 
-        <p>TABLES</p>
+<table class="govuk-table">
+<thead class="govuk-table__head">
+<tr class="govuk-table__row">
+<th scope="col" class="govuk-table__header">Seed</th>
+<th scope="col" class="govuk-table__header">Percentage</th>
+</tr>
+</thead>
+<tbody class="govuk-table__body">
+<tr class="govuk-table__row">
+<th scope="row" class="govuk-table__header">Wheat</th>
+<td class="govuk-table__cell">50%</td>
+</tr>
+<tr class="govuk-table__row">
+<th scope="row" class="govuk-table__header">Naked oats</th>
+<td class="govuk-table__cell">20%</td>
+</tr>
+<tr class="govuk-table__row">
+<th scope="row" class="govuk-table__header">Oilseed rape</th>
+<td class="govuk-table__cell">10%</td>
+</tr>
+<tr class="govuk-table__row">
+<th scope="row" class="govuk-table__header">White millet</th>
+<td class="govuk-table__cell">10%</td>
+</tr><tr class="govuk-table__row">
+<th scope="row" class="govuk-table__header">Red millet</th>
+<td class="govuk-table__cell">5%</td>
+</tr><tr class="govuk-table__row">
+<th scope="row" class="govuk-table__header">Canary seed or sunflower hearts</th>
+<td class="govuk-table__cell">5%</td>
+</tr>
+</tbody>
+</table>
 <p>If you farm organically, or are converting to organic farming, you must either use organic seed or get approval from your organic certification body to use non-organic seed.</p>
 
 
 
-        <p>You can alter your seed mix to meet the specific needs of certain species. You can adjust your seed mix if you know one of these species is present in your area:</p>
+
 <h2 class="govuk-heading-m">Adapting the seed mix</h2>
-<p>Different species prefer feeding on different seeds, depending on the beak size and the seed's nutritional value. You can adapt the recommended seed mix to provide fod for certain species if you know they are in your area.</p>
+<p>Different species prefer feeding on different seeds, depending on the beak size and the seed's nutritional value. You can adapt the recommended seed mix to provide food for certain species if you know they are in your area.</p>
 <p> For example, larger buntings such as corn buntings and yellowhammers prefer cereals. So you could add barley or triticale to the recommended seed mix.</p>
 <p> Finches prefer smaller, oily seeds. You could increase the proportions of these by adding some linseed or mustard seed.</p>
 <p> Some species have seen a greater decline in populations than others so it is especially worthwhile adapting your seed mix to suit these.</p>
@@ -109,12 +146,12 @@
                   <li>you do not use maize or tic beans as they attract pests and birds prefer other seeds</li>
                 </ul>
 
-        <p>The <a href="">Big Farmland Bird Count</a> from the Game and Wildlife Conservation Trust and the 
-          <a href="">Bird Identifier</a>from the Royal Society for the Protection of Birds</a> can help you recognise what is living in your area.</p>
+        <p>The <a href="">Big Farmland Bird Count</a> from the Game and Wildlife Conservation Trust and the
+          <a href="">Bird Identifier</a> from the Royal Society for the Protection of Birds</a> can help you recognise what is living in your area.</p>
         </ul>
         <h2 class="govuk-heading-m">How much to spread</h2>
         <p>You should always have food available at your feeding sites.</p>
-        <p>To start with, spread around 25kg of seed each week at every site. Check regularly and adjust how often you spread seed or the amount you spread to match that needed by the birds. Each feeding situation will be different, so you should check feeding sites regularly and replace seed when most of it has been eaten.</p>
+        <p>To start with, spread around 25kg of seed each week at every site. Check regularly and adjust how often you feed or the amount you spread to match that needed by the birds. Each feeding situation will be different, so you should check feeding sites regularly and replace seed when most of it has been eaten.</p>
         <p>Birds need more seed during periods of cold weather, particular if they can't feed from other sources due to frost or snow.</p>
         <p>There should not be large amounts of seed left uneaten. If this happens, lower the amount of seed to reduce waste and the likelihood of the seed being eaten by deer, rats and pigeons.</p>
 
