--- a/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
+++ b/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
@@ -146,8 +146,8 @@
                   <li>you do not use maize or tic beans as they attract pests and birds prefer other seeds</li>
                 </ul>
 
-        <p>The <a href="">Big Farmland Bird Count</a> from the Game and Wildlife Conservation Trust and the
-          <a href="">Bird Identifier</a> from the Royal Society for the Protection of Birds</a> can help you recognise what is living in your area.</p>
+        <p>The <a href="https://www.bfbc.org.uk/">Big Farmland Bird Count</a> from the Game and Wildlife Conservation Trust and the
+          <a href="https://www.rspb.org.uk/birds-and-wildlife/wildlife-guides/identify-a-bird/">Bird Identifier</a> from the Royal Society for the Protection of Birds</a> can help you recognise what is living in your area.</p>
         </ul>
         <h2 class="govuk-heading-m">How much to spread</h2>
         <p>You should always have food available at your feeding sites.</p>
