--- a/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
+++ b/app/views/prototype-guidance/guidance-full/S011C-supplementary-winter-bird-feeding.html
@@ -32,32 +32,30 @@
       <!-- CONTENTS LIST -->
 
       <div class="dashboard-main">
-
       <div class="govuk-grid-column-two-thirds">
 
         <aside id="contents" class="part-navigation-container" role="complementary" style="border:0">
           <nav role="navigation" class="gem-c-contents-list  " data-module="track-click" aria-label="Pages in this guide">
             <h2 class="gem-c-contents-list__title govuk-body-s govuk-!-margin-bottom-0">Contents</h2>
             <ol class="gem-c-contents-list__list">
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">Why farmland birds need extra food in winter</a></li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">When to start spreading seed</a></li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">Choosing appropriate feeding sites</a></li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">The recommended seed mix</a></li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">Adapting the seed mix</a></li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">How much to spread</a></li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#">How to spread the seed effectively</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#Why">Why farmland birds need extra food in winter</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#When">When to start spreading seed</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#Choose">Choose appropriate feeding sites</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#The">The recommended seed mix</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#Adapt">Adapt the seed mix</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#How">How much to spread</a></li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed"><a href="#Spread">Spread the seed effectively</a></li>
             </ol>
           </nav>
         </aside>
 
-        <!-- MAIN CONTENTS -->
 
-        <h2 class="govuk-heading-m">Why farmland birds need extra food in winter</h2>
+        <!-- MAIN CONTENTS -->
+        <h2 id="Why" class="govuk-heading-l">Why farmland birds need extra food in winter</h2>
         <p>Farmland bird species have declined since the 1970s. This is partly due to changing farming methods which has decreased the availability of seeds in winter and early spring. </p>
         <p>Spreading seed on your land is a simple and effective way to increase the availability of food for farmland birds.</p>
 
-
-        <h2 class="govuk-heading-m">When to start spreading seed</h2>
+        <h2 id="When" class="govuk-heading-l"><id="When">When to start spreading seed</h2>
         <p>Start spreading seed when other seed sources on your farm start to become depleted. The time this happens varies and depends on: </p>
 
         <ul class="govuk-list govuk-list--bullet">
@@ -68,7 +66,7 @@
         <p>As a guide, feed from December through to April.</p>
         <p>You should start feeding from the beginning of November if your <a href="">winter bird food plots</a> have failed or it is the first winter of an <a href="">autumn-sown winter bird food plot</a>. This will replace these plots as a food source.</p>
   </ul>
-        <h2 class="govuk-heading-m">Choosing appropriate feeding sites</h2>
+        <h2 id="Choose"class="govuk-heading-l">Choose appropriate feeding sites</h2>
         <p>You need to spread seed at more than one site to increase availability and provide seed for species which prefer to feed in different locations. For example, tree sparrows and yellowhammers like to have nearby cover, such as a hedge. Corn buntings prefer sites next to fences or ditches and with vantage points to perch and scan for predators.</p>
         <p>Top up the seed at each site on different days to make sure there is always some seed available. You will also reduce the risk of attracting pests, such as rats.
 </p>
@@ -84,7 +82,7 @@
         </ul>
 
 
-        <h2 class="govuk-heading-m">The recommended seed mix</h2>
+        <h2 id="The"class="govuk-heading-l">The recommended seed mix</h2>
 
         <p>A good general seed mix appropriate for a range of farmland birds:
 </p>
@@ -124,9 +122,7 @@
 <p>If you farm organically, or are converting to organic farming, you must either use organic seed or get approval from your organic certification body to use non-organic seed.</p>
 
 
-
-
-<h2 class="govuk-heading-m">Adapting the seed mix</h2>
+<h2 id="Adapt"class="govuk-heading-l">Adapt the seed mix</h2>
 <p>Different species prefer feeding on different seeds, depending on the beak size and the seed's nutritional value. You can adapt the recommended seed mix to provide food for certain species if you know they are in your area.</p>
 <p> For example, larger buntings such as corn buntings and yellowhammers prefer cereals. So you could add barley or triticale to the recommended seed mix.</p>
 <p> Finches prefer smaller, oily seeds. You could increase the proportions of these by adding some linseed or mustard seed.</p>
@@ -149,13 +145,13 @@
         <p>The <a href="https://www.bfbc.org.uk/">Big Farmland Bird Count</a> from the Game and Wildlife Conservation Trust and the
           <a href="https://www.rspb.org.uk/birds-and-wildlife/wildlife-guides/identify-a-bird/">Bird Identifier</a> from the Royal Society for the Protection of Birds</a> can help you recognise what is living in your area.</p>
         </ul>
-        <h2 class="govuk-heading-m">How much to spread</h2>
+        <h2 id="How"class="govuk-heading-l">How much to spread</h2>
         <p>You should always have food available at your feeding sites.</p>
         <p>To start with, spread around 25kg of seed each week at every site. Check regularly and adjust how often you feed or the amount you spread to match that needed by the birds. Each feeding situation will be different, so you should check feeding sites regularly and replace seed when most of it has been eaten.</p>
         <p>Birds need more seed during periods of cold weather, particular if they can't feed from other sources due to frost or snow.</p>
         <p>There should not be large amounts of seed left uneaten. If this happens, lower the amount of seed to reduce waste and the likelihood of the seed being eaten by deer, rats and pigeons.</p>
 
-        <h2 class="govuk-heading-m">How to spread seed effectively</h2>
+        <h2 id="Spread"class="govuk-heading-l">Spread the seed effectively</h2>
         <p>Aim for an even spread of seed either by hand or using equipment, such as a clean slug pellet spreader or purpose-built spreader.</p>
         <p>To discourage pests like rats and reduce the risk of disease at your feeding sites you should:</p>
         <ul class="govuk-list govuk-list--bullet">
